# TTGO-DOOM

./: README.md  flashwad.sh  partitions.csv  platformio.ini
src/: main.cpp  main.h  ttgo-config.h
src/prboom/: CMakeLists.txt  component.mk  d_main.c  doomdef.h  g_game.c  m_misc.c  tables.c  v_video.c  w_wad.c
src/prboom-esp32-compat/: CMakeLists.txt  gamepad.c  i_main.c  i_sound.c  i_system.c  i_video.c  mcp23017.h  psxcontroller.c  spi_lcd.c  spi_lcd.h  ttgo_c.cpp  ttgo_c.h
src/prboom-wad-tables/: CMakeLists.txt
